fixed header spacing

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,3 +12,7 @@ a {
 .NYI {
     text-decoration: line-through !important;
 }
+
+.content-wrapper {
+    margin: 40px;
+}
