--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,7 @@
     padding: 20px 20px;
     justify-content: space-between;
     background-color: $secondary-background-color;
+    margin-bottom: 120px;
     #center-header {
         position: absolute;
         left: 50%;
